@@ -1,6 +1,6 @@
 { pkgs, lib, config, ... }:
 let
-  inherit (lib) mkEnableOption mkIf;
+  inherit (lib) mkEnableOption mkIf mkDefault;
   cfg = config.profiles.desktops.hyprland.default;
   enabled = { enable = lib.mkDefault true; };
   scripts = import ../../../scripts { inherit pkgs lib config; };
@@ -17,6 +17,17 @@ in
     };
 
     services = mkIf config.wayland.windowManager.hyprland.enable {
+      hypridle = {
+        enable = mkDefault true;
+        dpms.timeout = mkDefault 300;
+
+        settings.general = {
+          after_sleep_cmd = "hyprctl dispatch dpms on";
+          ignore_dbus_inhibit = false;
+          lock_cmd = "hyprlock";
+        };
+      };
+
       hyprpaper.enable =
         if (config.services.swww.enable)
         then
